--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-query-devtools": "^5.82.0",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "firebase": "^11.10.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
