--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,47 @@ name: CI
 
 on:
   pull_request:
+    branches: [main, develop]
+    paths:
+      - "frontend/**"
+      - "backend/**"
+      - ".github/workflows/**"
   push:
     branches: [main, develop]
+    paths:
+      - "frontend/**"
+      - "backend/**"
+      - ".github/workflows/**"
 
 jobs:
-  test:
-    name: Unit tests (Vitest)
+  changes:
+    name: Detect changes
     runs-on: ubuntu-latest
+    outputs:
+      frontend: ${{ steps.filter.outputs.frontend }}
+      backend: ${{ steps.filter.outputs.backend }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      - name: Filter paths
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            frontend:
+              - 'frontend/**'
+            backend:
+              - 'backend/**'
+
+  test-frontend:
+    name: Frontend unit tests (Vitest)
+    needs: changes
+    if: ${{ needs.changes.outputs.frontend == 'true' }}
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: frontend
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,3 +59,37 @@ jobs:
 
       - name: Run tests
         run: npx vitest run
+
+  test-backend:
+    name: Backend tests (pytest)
+    needs: changes
+    if: ${{ needs.changes.outputs.backend == 'true' }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+          cache-dependency-path: backend/requirements.txt
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # DB 환경변수는 비워둬도 됨. (DB 없는 테스트만 돌릴 거라)
+      - name: Run tests
+        env:
+          DB_HOST: ""
+          DB_NAME: ""
+          DB_USER: ""
+          DB_PASSWORD: ""
+          DB_PORT: "5432"
+        run: pytest -q
